@@ -1,3 +1,9 @@
+2005-03-24  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-RC3-b16
+
+	* Fix: multi_create_user wasn't globalized
+
+	* Fix: Variable typo in manager_users
+
 2005-03-23  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-RC3-b15
 
 	* Change: Don't update the album's mod time when users request mail
